--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@material-ui/core": "^3.7.0",
+    "@material-ui/icons": "^3.0.1",
     "@types/react-helmet": "^5.0.7",
     "gatsby": "^2.0.53",
     "gatsby-image": "^2.0.20",
@@ -24,6 +25,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "react-moment": "^0.8.4",
     "styled-components": "^4.1.3"
   },
   "keywords": [
