--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.0",
+    "@emotion/styled": "^10.0.0",
+    "emotion": "^10.0.0",
+    "emotion-server": "^10.0.0",
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
     "@types/react-helmet": "^5.0.7",
+    "@types/styled-components": "^4.1.4",
     "@wapps/gatsby-plugin-material-ui": "^1.1.0",
     "gatsby": "^2.0.53",
     "gatsby-image": "^2.0.20",
+    "gatsby-plugin-emotion": "^3.0.0",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-netlify-cms": "^3.0.9",
     "gatsby-plugin-offline": "^2.0.16",
