--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "netlify-cms": "^2.3.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-moment": "^0.8.4",
