--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,7 +29,7 @@ collections:
       - label: 'Template Key'
         name: 'templateKey'
         widget: 'hidden'
-        default: 'blog'
+        default: 'project'
       - label: 'Title'
         name: 'title'
         widget: 'string'
