--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
     "@types/react-helmet": "^5.0.7",
+    "@types/react-scroll": "^1.5.4",
     "@wapps/gatsby-plugin-material-ui": "^1.1.0",
     "core-js": "^2.6.1",
     "emotion": "^10.0.0",
@@ -35,6 +36,7 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-moment": "^0.8.4",
+    "react-scroll": "^1.7.10",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
