--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/core": "^10.0.0",
     "@emotion/styled": "^10.0.0",
     "@material-ui/core": "^3.7.0",
-    "@material-ui/icons": "^3.0.1",
+    "@material-ui/icons": "^3.0.2",
+    "@types/react-fontawesome": "^1.6.4",
     "@types/react-helmet": "^5.0.7",
     "@types/react-scroll": "^1.5.4",
     "@wapps/gatsby-plugin-material-ui": "^1.1.0",
@@ -17,6 +18,7 @@
     "gatsby": "^2.0.53",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-emotion": "^3.0.0",
+    "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-netlify-cms": "^3.0.9",
     "gatsby-plugin-offline": "^2.0.16",
@@ -34,13 +36,21 @@
     "react": "^16.6.3",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.6.3",
+    "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0",
     "react-moment": "^0.8.4",
     "react-scroll": "^1.7.10",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.2.4"
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "gatsby-plugin-tslint": "0.0.2",
+    "prettier": "^1.15.2",
+    "tslint": "^5.12.1",
+    "tslint-config-blvd": "^1.2.1",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-plugin-prettier": "^2.0.0"
   },
   "license": "MIT",
   "main": "n/a",
